tests/core/snapshots/test-server-vars.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(vars: [{key: "foo", value: "bar"}]) @upstream @link(src: "config.yml", type: Config) {
  query: Query
}

type Query {
  foo: String @http(url: "http://jsonplaceholder.typicode.com/foo")
}
