tests/core/snapshots/test-set-cookie-headers.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json",
    "set-cookie": "user=1; user=2"
  },
  "body": {
    "data": {
      "u1": {
        "name": "foo"
      },
      "u2": {
        "name": "bar"
      }
    }
  }
}
