tests/core/snapshots/test-set-cookie-headers.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(headers: {setCookies: true}) @upstream @link(src: "config.yml", type: Config) {
  query: Query
}

type Query {
  user(id: Int!): User @http(url: "http://jsonplaceholder.typicode.com/users/{{.args.id}}")
}

type User {
  email: String!
  id: Int!
  name: String!
  phone: String
  username: String!
  website: String
}
