tests/core/snapshots/test-tag.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

type NEWS {
  getAllNews: News__NewsList!
}

type News__News {
  body: String
  id: Int
  postImage: String
  title: String
}

type News__NewsList {
  news: [News__News]
}

scalar PhoneNumber

type Query {
  news: NEWS
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
